--- a/Pages/Audits-ssi.razor
+++ b/Pages/Audits-ssi.razor
@@ -9,6 +9,7 @@
     (<a href="https://www.ssi.gouv.fr/entreprise/reglementation/confiance-numerique/le-referentiel-general-de-securite-rgs/">RGS</a>),
     en particulier concernant les exigences P.A.S.S.I. Les référentiels techniques sont proposés et retenus en fonction du périmètre à auditer.
 </p>
+<center><hr class="line"></center>
 
 <div>
     <br>
@@ -20,8 +21,8 @@
         matériels et logiciels déployés dans un système d’information. Ces dispositifs peuvent notamment être
         des équipements réseau, des systèmes d'exploitation (serveur ou poste de travail), des applications ou des
         produits de sécurité.
-    <br>
     </p>
+    <br>
 </div>
 
 <div class="bgDiv">
@@ -32,8 +33,8 @@
         L’audit de code source consiste en l’analyse de tout ou partie du code source ou des conditions de
         compilation d’une application dans le but d’y découvrir des vulnérabilités, liées à de mauvaises pratiques
         de programmation ou des erreurs de logique, qui pourraient avoir un impact en matière de sécurité.
-    <br>
     </p>
+    <br>
 </div>
 
 <div>
@@ -45,8 +46,8 @@
         choix, au positionnement et à la mise en œuvre des dispositifs matériels et logiciels déployés dans un
         système d’information à l’état de l’art et aux exigences et règles internes de l’audité. L’audit peut être
         étendu aux interconnexions avec des réseaux tiers, et notamment Internet.
-    <br>
     </p>
+    <br>
 </div>
 
 <div class="bgDiv">
@@ -60,7 +61,7 @@
         identifiées au cours d’autres activités d’audit définies dans ce chapitre.
         Cette activité d’audit peut être réalisée soit depuis l’extérieur du système d’information audité
         (notamment depuis Internet ou le réseau interconnecté d’un tiers), soit depuis l’intérieur.
-    <br>
     </p>
+    <br>
 </div>
 
