--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -9,7 +9,7 @@
 <div class= "bgBan">
     <img src="Images/Logov2.png" class="imgBan" alt="Conseil en systèmes et logiciels informatiques">
 </div>
-
+<center><hr class="line"></center>
 
 <div class="bgDiv">
     <br>
@@ -20,9 +20,9 @@
         Face aux difficultés rencontrées pour la sécurisation des projets liés à l'infrastructure et aux applications, 
         Taisen propose une méthode à la fois réaliste, proche des équipes techniques et cohérente avec les objectifs des RSSI. <br>
         Si vous avez déjà eu le sentiment que, malgré vos efforts, vos contrôles de sécurité et processus fonctionnels ne vous apportent pas la maitrise réelle de vos risques, 
-        vous êtes au bon endroit.
-        <br>
+        vous êtes au bon endroit.        
     </p>
+    <br>
 </div>
 
 <div>
@@ -46,7 +46,7 @@
     <br>
 </div>
 
-<div>
+<div class="bgDiv">
     <br>
     <h2>Un panel d'audits de sécurité adapté à vos besoins</h2>
     <img src="Images/Ok.png"class="imgLogo" alt="audits de sécurité">
@@ -63,8 +63,7 @@
     <br>
 </div>
 
-
-<div class="bgDiv">
+<div>
     <br>
     <h2> Une recherche d'amélioration constante </h2>
     <img src="Images/Ok.png"class="imgLogo" alt="méthode SIMPLE">
@@ -72,10 +71,25 @@
         Grâce à un temps dédié au retour d'expérience, à la prise de recul et au développement d'outillage et de processus efficients,
         Taisen à l'ambition d'aller plus loin dans la sécurisation des projets applicatifs. Ce travail est consultable et open source. 
     </p>
-    <br>
     <form>
         <a href="https://github.com/Aif4thah">
             <input type="button" class="button" value="Découvrir les projets (GitHub)">
+        </a>
+    </form>
+    <br>
+</div>
+
+<div class="bgDiv">
+    <br>
+    <h2>Des formations et sensibilisations sur mesures</h2>
+    <img src="Images/Ok.png"class="imgLogo" alt="Formations et Sensibilisations">
+    <p> 
+        Des formations destinées aux entreprises et aux écoles du numérique sont également proposées. 
+        Elles ont pour objectif de partager un contenu riche et à jour, permettant de progresser quel que soit le niveau initial.
+    </p>
+    <form>
+        <a href="/Formations">
+            <input type="button" class="button" value="Voir les Formations">
         </a>
     </form>
     <br>
