--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -10,7 +10,8 @@
             @Body
 
             <div>
-                <br>
+                <center><hr class="line"></center>
+                
                 <h2>Contact</h2>
                 <img src="Images/Portrait.png" class="imgSmall" alt="Contact">
 
