--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -34,14 +34,20 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Formations">
+                <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Formation
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://github.com/Aif4thah">
-                <img src="Images/Github.png" class="imgNav" alt="--">  Projets
+                <img src="Images/Github.png" class="imgNav" alt="--">  Développement
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://www.linkedin.com/in/mvacarella">
-                 <img src="Images/in.png" class="imgNav" alt="--">  CV
+                 <img src="Images/in.png" class="imgNav" alt="--">  Experience
             </NavLink>
         </div>
 
