--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -6,6 +6,10 @@ html, body {
     line-height: 1.5;
 }
 
+[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
+    /* cursor: pointer; */
+}
+
 h1:focus {
     outline: none;
 }
@@ -190,11 +194,12 @@ img {
     box-sizing: border-box;
     position: relative;
     background-attachment: scroll;
-    margin-bottom: 3px;
+    
 }
 
 .bgDiv{
     background-color: rgb(248, 248, 248);
+    margin-bottom: 30px;
 }
 
 .img {
@@ -243,3 +248,11 @@ legend{
 label{
     display: inline;
 }
+
+hr.line {
+    
+    text-align: center;
+    border: 1px solid rgb(70, 70, 70);
+    width: 10em;
+    
+  }
