--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -17,13 +17,11 @@
     <p>Le champ de cette méthodologie cible les projets applicatifs ainsi que l'infrastructure sur laquelle ils
         reposent, ce qui inclut:</p>
     <ul>
-        <li>- toute application métier, qu'il s'agisse d'un environnement Web, industriel, IoT, cloud, hybride, etc.
-        </li>
+        <li>- toute application métier, qu'il s'agisse d'un environnement Web, industriel, IoT, cloud, hybride, etc.</li>
         <li>- le middleware, les librairies, les dépendances et les composants tiers</li>
         <li>- les composants du système d’exploitation, des microservices, ainsi que leur orchestration</li>
         <br>
     </ul>
-    
 </div>
 
 @if (GetEtapes == null)
@@ -48,7 +46,7 @@ else
                     @if (P.Referentiel != null)
                     {
                         <a href="@P.Referentiel.Uri">@P.Referentiel.Nom</a>
-                        <br />
+                        <br>
                     }
                 }
             }
@@ -97,6 +95,7 @@ else
             </tbody>
         </table>
         <a>Soit un poids total de @TotalPoids jours</a>
+        <br>
     </div>
     
 }
