--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -27,7 +27,7 @@
 
 <div>
     <br>
-    <h2>Une méthode différente, en phase avec les bonnes pratiques </h2>
+    <h2>Une méthode d'accompagnement en phase avec les bonnes pratiques</h2>
     <img src="Images/Ok.png"class="imgLogo" alt="bonnes pratiques">
     <p> 
         L'accompagnement technique et la réalisation des tests de sécurité au bon moment sont souvent les maillons manquant d'une démarche de sécurisation réussie.
@@ -40,7 +40,7 @@
     </p>
     <form>
         <a href="/simple">
-            <input type="button" class="button" value="Découvrir la méthode d'Accompagnement">
+            <input type="button" class="button" value="Découvrir l'Accompagnement">
         </a>
     </form>
     <br>
