--- a/Pages/Audits-ssi.razor
+++ b/Pages/Audits-ssi.razor
@@ -9,7 +9,12 @@
     (<a href="https://www.ssi.gouv.fr/entreprise/reglementation/confiance-numerique/le-referentiel-general-de-securite-rgs/">RGS</a>),
     en particulier concernant les exigences P.A.S.S.I. Les référentiels techniques sont proposés et retenus en fonction du périmètre à auditer.
 </p>
+
+<div class="bgAudits">
+    <br><br><br><br><br><br><br><br><br>
+</div>
 <center><hr class="line"></center>
+
 
 <div>
     <br>
