--- a/Pages/Formation.razor
+++ b/Pages/Formation.razor
@@ -6,7 +6,12 @@
 <h1>Formations</h1>
 <p class="sh1">
     Les formations et sensibilisations adressent les différents aspects de la cybersécurité et sont systématiquement adaptées au public visé.
-</p>
+    </p>
+
+<div class="bgFormation">
+    <br><br><br><br><br><br><br><br><br>
+</div>
+
 <center><hr class="line"></center>
 
 <div class="bgDiv">
