--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -7,8 +7,16 @@
 <PageTitle>SIMPLE</PageTitle>
 
 <h1>Méthode SIMPLE</h1>
-<p class="sh1">L'objectif de cette méthode est de faire progresser significativement le niveau de sécurité d'un projet
-    en moins de 2 mois</p>
+<p class="sh1">
+    L'objectif de cette méthode est de faire progresser significativement le niveau de sécurité d'un projet
+    en moins de 2 mois
+</p>
+
+
+<div class="bgAccompagnement">
+    <br><br><br><br><br><br><br><br><br>
+</div>
+<center><hr class="line"></center>
 
 <div>
     <h2>Périmètre</h2>
