--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -203,8 +203,45 @@ img {
     box-sizing: border-box;
     position: relative;
     background-attachment: scroll;
-
+    background-position-y: -57em;
 }
+
+.bgFormation {
+    background-image: url("../Images/Formation.jpg");
+    background-size: 100% auto;
+    transition: background-position 0s !important;
+    background-repeat: no-repeat !important;
+    background-attachment: fixed !important;
+    box-sizing: border-box;
+    position: relative;
+    background-attachment: scroll;
+    background-position-y: -20em;
+}
+
+.bgAccompagnement {
+    background-image: url("../Images/Accompagnement.jpg");
+    background-size: 100% auto;
+    transition: background-position 0s !important;
+    background-repeat: no-repeat !important;
+    background-attachment: fixed !important;
+    box-sizing: border-box;
+    position: relative;
+    background-attachment: scroll;
+    background-position-y: -21em;
+}
+
+.bgAudits {
+    background-image: url("../Images/Audits.jpg");
+    background-size: 100% auto;
+    transition: background-position 0s !important;
+    background-repeat: no-repeat !important;
+    background-attachment: fixed !important;
+    box-sizing: border-box;
+    position: relative;
+    background-attachment: scroll;
+    background-position-y: -40em;
+}
+
 
 .bgDiv {
     background-color: rgb(248, 248, 248);
@@ -263,5 +300,28 @@ hr.line {
     text-align: center;
     border: 1px solid rgb(70, 70, 70);
     width: 10em;
+
+}
+
+
+/* responsive */
+
+@media (max-width: 641px) {
+
+    .bgBan{
+        background-position-y: -8em;
+    }
+
+    .bgFormation {
+        background-position-y: 20em;
+    }
+    
+    .bgAccompagnement {
+        background-position-y: 15em;
+    }
+    
+    .bgAudits {
+        background-position-y: 20em;
+    }
 
 }
