--- a/Shared/SimpleLayout.razor
+++ b/Shared/SimpleLayout.razor
@@ -31,7 +31,7 @@
                 <br>
                 <h3>Licence</h3>
                 <span class="oi oi-badge" aria-hidden="true"></span>
-                <a>GPL-3.0 license</a>
+                <a href="Data/gpl-3.0.md">GPL-3.0 license</a>
             </div>
             
             <br><br><br>
